--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -28,4 +28,10 @@
         android:id="@+id/button_save"
         style="@style/ButtonStyle"
         android:text="@string/button_save" />
+
+    <Button
+        android:id="@+id/button_cancel"
+        style="@style/ButtonStyle"
+        android:backgroundTint="@color/red"
+        android:text="@string/button_cancel" />
 </LinearLayout>
